# modules/fk_library/app/library/controllers/AuthorExampleController.scala
@@ -1,6 +1,5 @@
 package library.controllers
 
-import foundation.util.QueryParamModel
 import library.dtos.AuthorDTO
 import library.dtos.AuthorPaginateDTO
 import library.managers.AuthorManager
